# sysedit

./: CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp  main.h  systemdata.cpp  systemdata.h
